--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,9 +7,11 @@
     "@types/node": "12.7.3",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "antd": "^3.22.2",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
     "apollo-link-http": "^1.5.15",
+    "formik": "^1.5.8",
     "graphql": "^14.5.4",
     "graphql-tag": "^2.10.1",
     "react": "^16.9.0",
