--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "typescript": "3.6.2"
+    "typescript": "3.6.2",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
