--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web",
+  "name": "@abb/web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,7 +20,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "typescript": "3.6.2",
-    "yup": "^0.27.0"
+    "yup": "^0.27.0",
+    "@abb/common": "1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
