--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@abb/common": "1.0.0",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.3",
     "@types/react": "16.9.2",
@@ -21,7 +22,7 @@
     "react-scripts": "3.1.1",
     "typescript": "3.6.2",
     "yup": "^0.27.0",
-    "@abb/common": "1.0.0"
+    "@abb/controller": "1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
