--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,19 +14,23 @@
     "@types/jest": "^22.2.3",
     "@types/node": "^9.6.6",
     "@types/node-fetch": "^1.6.9",
+    "@types/nodemailer": "^6.2.1",
     "@types/request-promise": "^4.1.41",
     "@types/sparkpost": "^2.1.3",
     "@types/uuid": "^3.4.3",
     "@types/ws": "^5.1.2",
     "@types/yup": "^0.24.3",
     "gql2ts": "^1.7.2",
+    "jest": "^24.9.0",
     "nodemon": "^1.17.3",
+    "ts-jest": "^24.0.2",
     "ts-node": "6.0.0",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.12.0",
     "typescript": "^2.9.1"
   },
   "dependencies": {
+    "@abb/common": "1.0.0",
     "@gql2ts/from-schema": "^1.8.0",
     "@types/express": "^4.11.1",
     "axios": "^0.18.0",
@@ -38,13 +42,14 @@
     "express-session": "^1.15.6",
     "faker": "^4.1.0",
     "glob": "^7.1.2",
-    "graphql": "^0.13.2",
+    "graphql": "^14.5.4",
     "graphql-import": "^0.5.0",
     "graphql-tools": "^3.0.0",
     "graphql-yoga": "^1.9.2",
     "ioredis": "^3.2.2",
     "merge-graphql-schemas": "^1.5.1",
     "node-fetch": "^2.1.2",
+    "nodemailer": "^6.3.0",
     "pg": "^7.4.1",
     "rate-limit-redis": "^1.4.0",
     "reflect-metadata": "^0.1.12",
@@ -52,12 +57,27 @@
     "sparkpost": "^2.1.2",
     "typeorm": "0.2.0",
     "uuid": "^3.2.1",
-    "yup": "^0.24.1",
-    "@abb/common": "1.0.0"
+    "yup": "^0.24.1"
   },
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
     "test": "NODE_ENV=test jest --watch",
     "gen-schema-types": "ts-node src/scripts/createTypes.ts"
+  },
+  "jest": {
+    "testURL": "http://localhost",
+    "globalSetup": "./src/testUtils/callSetup.js",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
