--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@abb/common": "1.0.0",
+    "@abb/controller": "1.0.0",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.3",
     "@types/react": "16.9.2",
@@ -14,15 +15,12 @@
     "apollo-link-http": "^1.5.15",
     "formik": "^1.5.8",
     "graphql": "^14.5.4",
-    "graphql-tag": "^2.10.1",
     "react": "^16.9.0",
-    "react-apollo": "^3.0.1",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "typescript": "3.6.2",
-    "yup": "^0.27.0",
-    "@abb/controller": "1.0.0"
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
