Implemented Docker-Image

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,5 +1,24 @@
 [
   {
+    "name": "production",
+    "type": "postgres",
+    "host": "localhost",
+    "port": 5432,
+    "username": "shaj",
+    "password": "postgres",
+    "database": "graphql-ts-server",
+    "synchronize": true,
+    "logging": true,
+    "entities": ["entity/**/*.js"],
+    "migrations": ["migration/**/*.js"],
+    "subscribers": ["subscriber/**/*.js"],
+    "cli": {
+      "entitiesDir": "src/entity",
+      "migrationsDir": "src/migration",
+      "subscribersDir": "src/subscriber"
+    }
+  },
+  {
     "name": "development",
     "type": "postgres",
     "host": "localhost",
