--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -20,9 +20,11 @@
     "@types/uuid": "^3.4.3",
     "@types/ws": "^5.1.2",
     "@types/yup": "^0.24.3",
+    "copyfiles": "^2.1.1",
     "gql2ts": "^1.7.2",
     "jest": "^24.9.0",
     "nodemon": "^1.17.3",
+    "rimraf": "^3.0.0",
     "ts-jest": "^24.0.2",
     "ts-node": "6.0.0",
     "tslint": "^5.9.1",
@@ -62,6 +64,8 @@
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
     "test": "NODE_ENV=test jest --watch",
+    "build": "rimraf ./dist && tsc",
+    "copy": "copyfiles -u 1 src/**/*.graphql dist",
     "gen-schema-types": "ts-node src/scripts/createTypes.ts"
   },
   "jest": {
