fixed apollo codegen

--- a/package.json
+++ b/package.json
@@ -3,6 +3,18 @@
   "workspaces": [
     "packages/*"
   ],
+  "nohoist": [
+    "**/react-native",
+    "**/react-native/**",
+    "**/metro",
+    "**/metro/**",
+    "**/expo",
+    "**/expo/**",
+    "**/react-native-typescript-transformer",
+    "**/react-native-typescript-transformer/**",
+    "**/metro-bundler-config-yarn-workspaces",
+    "**/metro-bundler-config-yarn-workspaces/**"
+  ],
   "scripts": {
     "build:server": "lerna run build --scope={@abb/common,@abb/server}",
     "build:web": "lerna run build --scope={@abb/common,@abb/controller,@abb/web}"
