--- a/packages/controller/package.json
+++ b/packages/controller/package.json
@@ -5,7 +5,10 @@
   "typings": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "build": "rimraf ./dist && tsc"
+    "build": "rimraf ./dist && yarn run refresh:types && tsc",
+    "schema:download": "apollo schema:download --endpoint=http://localhost:4000",
+    "codegen:generate": "apollo client:codegen --localSchemaFile=schema.json --target=typescript --includes=src/**/*.tsx --tagName=gql --addTypename --globalTypesFile=src/types/graphql-global-types.ts types",
+    "refresh:types": "yarn run schema:download && yarn run codegen:generate"
   },
   "dependencies": {
     "graphql-tag": "^2.10.1",
